--- a/styles.css
+++ b/styles.css
@@ -433,6 +433,7 @@ h1 {
     margin-left: -80%;
     border-radius: 0 0 50% 50%;
     background-image: var(--profile-bg);
+    position: fixed;
   }
 
   .bubble {
@@ -446,9 +447,12 @@ h1 {
     z-index: -1;
     border-radius: 50% 50% 0 0;
     background-color: #f9f4fa;
+    position: fixed;
   }
 
   .phone {
+    margin-top: 6em;
+    top: 50%;
     right: 18%;
     -webkit-animation: slide-in-left 1.4s ease-in both;
     animation: slide-in-left 1.4s ease-in both;
